# WasmEdge

./: CMakeLists.txt
lib/api/: wasmedge.cpp
lib/common/: CMakeLists.txt
lib/system/: allocator.cpp
